# ghost-rust

./: .env  .gitignore  Cargo.toml  README.md  gen_migration.sh  migration.sh
sql/: down_postgres.sql  up_postgres.sql
src/: error.rs  lib.rs  main.rs  util.rs
src/dao/: common.rs  mod.rs  util.rs
src/dao/data/: default_settings.json
src/dao/mysql/: mod.rs
src/dao/postgres/: mod.rs  schema.rs
src/dao/postgres/models/: settings.rs
