[package]
name = "ghost"
version = "0.1.0"
authors = ["xiongbingchao <xiongbingchao@youzan.com>"]

[dependencies]
diesel = { version = "0.16.0", features = ["postgres", "mysql", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["postgres", "mysql"] }
dotenv = "0.9.0"
r2d2 = "0.7.0"
r2d2-diesel = "0.16.0"