[package]
name = "ghost"
version = "0.1.0"
authors = ["xiongbingchao <xiongbingchao@youzan.com>"]

[dependencies]
diesel = { version = "0.16.0", features = ["postgres", "mysql", "chrono", "huge-tables"] }
diesel_codegen = { version = "0.16.0", features = ["postgres", "mysql"] }
dotenv = "0.9.0"
r2d2 = "0.7.0"
r2d2-diesel = "0.16.0"
chrono = "0.4"
serde = "1.0.17"
serde_json = "1.0.5"
serde_derive = "1.0.17"